--- a/GuestBookProject/Web.config
+++ b/GuestBookProject/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -43,7 +43,7 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
+      </dependentAssembly>add name="GroupBookEntities"
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
@@ -56,9 +56,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-    <add name="GroupBookEntities" connectionString="metadata=res://*/Entity.GusetBookModel.csdl|res://*/Entity.GusetBookModel.ssdl|res://*/Entity.GusetBookModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=GroupBook;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="GuestBookProjectEntities" connectionString="metadata=res://*/EntityModel.GuestBookProjectModel.csdl|res://*/EntityModel.GuestBookProjectModel.ssdl|res://*/EntityModel.GuestBookProjectModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=GuestBookProject;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="GuestBookProjectContext" connectionString="metadata=res://*/EntityModel.GuestBookProjectModel.csdl|res://*/EntityModel.GuestBookProjectModel.ssdl|res://*/EntityModel.GuestBookProjectModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=GuestBookProject;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
