--- a/GuestBookProject/packages.config
+++ b/GuestBookProject/packages.config
@@ -2,10 +2,13 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
-  <package id="EntityFramework.zh-Hant" version="6.1.3" targetFramework="net472" />
+  <package id="Dapper" version="2.0.123" targetFramework="net472" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="EntityFramework.zh-Hant" version="6.2.0" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
+  <package id="LinqKit" version="1.2.2" targetFramework="net472" />
+  <package id="LinqKit.Core" version="1.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net472" />
@@ -26,8 +29,11 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
+  <package id="morelinq" version="3.3.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Newtonsoft.JsonResult" version="1.0.5778.10762" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="Slapper.AutoMapper" version="2.0.5" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
