--- a/GuestBookProject/packages.config
+++ b/GuestBookProject/packages.config
@@ -34,6 +34,10 @@
   <package id="Newtonsoft.JsonResult" version="1.0.5778.10762" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="Slapper.AutoMapper" version="2.0.5" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
+  <package id="X.PagedList" version="7.9.0" targetFramework="net472" />
+  <package id="X.PagedList.Mvc" version="7.9.1" targetFramework="net472" />
+  <package id="X.PagedList.Web.Common" version="7.9.1" targetFramework="net472" />
 </packages>
